<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Auth.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingTop="20dp"
            android:paddingEnd="50dp"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/kombinim_icon" />

            <EditText
                android:id="@+id/txtbx_email2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/auth_edittext"
                android:drawableStart="@drawable/email"
                android:drawablePadding="20dp"
                android:hint="@string/e_mail"
                android:maxLength="@integer/emailustsinir"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />


            <EditText
                android:id="@+id/txtbx_sifre2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/auth_edittext"
                android:drawableStart="@drawable/padlock"
                android:drawablePadding="20dp"
                android:hint="@string/sifre"
                android:inputType="textPassword"
                android:maxLength="@integer/sifreustsinir"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:text="Yardım mı lazım ?"
                android:textAllCaps="false"
                android:textColor="@color/beyaz" />

            <Button
                android:id="@+id/bttn_girisyap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/auth_button_design"
                android:text="@string/giris_yap"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#fff" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Yada"
                    android:textColor="@color/beyaz" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="#fff" />

            </LinearLayout>

            <TextView
                android:id="@+id/bttn_kayitolloginsayfasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/kayit_ol"
                android:textAllCaps="false"
                android:textColor="@color/beyaz" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/auth_edittext"
                android:layout_marginTop="30dp"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Bizi sosyal medya hesaplarımızdan takip edebilirsiniz."
                    android:textColor="@color/beyaz"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <ImageButton
                        android:id="@+id/gotoyoutube"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        app:srcCompat="@drawable/ic_youtube" />

                    <ImageButton
                        android:id="@+id/gotoinstagram"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        app:srcCompat="@drawable/ic_instagram" />

                    <ImageButton
                        android:id="@+id/gototwitter"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        app:srcCompat="@drawable/ic_twitter" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>